[tool.poetry]
name = "python-koans"
version = "0.1.0"
description = ""
authors = ["Aleksei Chernikov <aleksei.software@gmail.com>"]
readme = "README.md"
packages = [{include = "python_koans"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
